--- a/src/templates/dashboard/company_dashboard.html
+++ b/src/templates/dashboard/company_dashboard.html
@@ -33,8 +33,8 @@
 <!-- SECTION 2 - My Projects | General Progress -->
 <div class="flex flex-col gap-5 h-[450px]">
 
-    <!-- SECTION 2.1 - MY PROJECTS / MY PROGRESS -->
-    <div class="flex flex-row gap-5 w-full flex-1 overflow-hidden">
+    <!-- SECTION 2.1 - MY PROJECTS / APLICATIONS -->
+    <div class="flex flex-col md:flex-row gap-5 w-full md:flex-1 overflow-hidden">
 
         <!-- SECTION 2.1.1 - MY PROJECTS -->
         <div class="flex-1 flex flex-col overflow-hidden">
@@ -76,7 +76,7 @@
 </div>
 
 <!-- SECTION 3 - SUCCESS ANALISIS -->
-<div class="w-full flex-1 flex flex-col overflow-hidden">
+<div class="w-full md:flex-1 flex flex-col overflow-hidden">
     <div class="flex justify-between items-center mb-2">
         <p class="text-lg font-bold text-primary_black"> {% translate "Análisis de éxito" %} </p>
     </div>
