--- a/src/templates/dashboard/freelancer_dashboard.html
+++ b/src/templates/dashboard/freelancer_dashboard.html
@@ -40,7 +40,7 @@
         <div class="flex justify-between items-center mb-2">
             <p class="text-lg font-bold text-primary_black"> {% translate "Tareas Pendientes" %} </p>
         </div>
-        <div class="bg-bg_gray rounded-xl flex-1 overflow-y-auto">
+        <div class="bg-bg_gray rounded-xl md:flex-1 overflow-y-auto">
             <div class="flex flex-col gap-4 p-4 rounded-xl h-full">
                 {% for task in freelancer_pending_tasks %}
                     <div>
@@ -54,7 +54,7 @@
     </div>
 
     <!-- SECTION 2.2 - MY PROJECTS / MY PROGRESS -->
-    <div class="flex flex-col gap-5 w-full flex-1 overflow-hidden">
+    <div class="flex flex-col gap-5 w-full md:flex-1 overflow-hidden">
 
         <!-- SECTION 2.2.1 - MY PROJECTS -->
         <div class="flex-1 flex flex-col overflow-hidden">
@@ -79,7 +79,7 @@
             <div class="flex justify-between items-center mb-2">
                 <p class="text-lg font-bold text-primary_black"> {% translate "Mi Progreso" %} </p>
             </div>
-            <div class="bg-bg_gray rounded-xl flex-1 overflow-y-auto ">
+            <div class="bg-bg_gray rounded-xl flex-1 overflow-y-auto">
                 <div class="flex items-center justify-center gap-8 m-auto h-full w-full p-4">
                     <!-- Canvas -->
                     <div class="relative">
