--- a/src/templates/utils/anchor_button.html
+++ b/src/templates/utils/anchor_button.html
@@ -1,6 +1,7 @@
-<a id="{{ id }}" href="{{ url|default:'#' }}" class="{{ classname }} py-2 px-4 rounded-lg text-bg_white
-    transform transition-transform duration-300
+<a id="{{ id }}" href="{{ url|default:'#' }}" class="{{ classname }} py-2 px-4 rounded-lg text-bg_white 
+    transform transition-transform duration-300 
     {% if type == 1 %} bg-[#636AF2] hover:bg-primary_dark hover:scale-110 {% endif %}
-    {% if type == 2 %} bg-primary_light hover:bg-primary_dark hover:scale-110 {% endif %}">
+    {% if type == 2 %} bg-primary_light hover:bg-primary_dark hover:scale-110 {% endif %}
+    block sm:inline-block w-full sm:w-auto text-center">
     {{ label|default:'Button' }}
 </a>
