--- a/src/templates/projects/report_settings.html
+++ b/src/templates/projects/report_settings.html
@@ -1,19 +1,41 @@
-{% extends "base.html" %}
+{% extends "navigation/navigation.html" %}
 
-{% block content %}
-<div class="container mx-auto px-4 py-8">
-    <h1 class="text-2xl font-bold mb-6">Report Settings for {{ project.title }}</h1>
-    <form method="post" class="space-y-4">
-        {% csrf_token %}
-        {% for field in form %}
-            <div class="flex items-center space-x-2">
-                {{ field }}
-                <label for="{{ field.id_for_label }}">{{ field.label }}</label>
+{% load i18n %}
+{% block app_content %}
+<div class="flex justify-center items-center py-12">
+    <div class="flex flex-col mx-40 bg-bg_gray p-8 rounded-lg shadow-lg w-full max-w-2xl">
+        <h1 class="text-4xl font-extrabold text-gray-900 mb-8 border-b-2 border-gray-200 pb-4">
+            {% translate "Configuración del Reporte para" %} {{ project.title }}
+        </h1>
+
+        <form method="post" class="space-y-6">
+            {% csrf_token %}
+            {% for field in form %}
+                <div>
+                    <label for="{{ field.id_for_label }}" class="block text-md font-medium text-primary_black mb-1">
+                        {{ field.label }}
+                    </label>
+                    {{ field }}
+                    {% if field.errors %}
+                        {% for error in field.errors %}
+                            <p class="text-red-500 text-xs italic mt-1">{{ error }}</p>
+                        {% endfor %}
+                    {% endif %}
+                </div>
+            {% endfor %}
+            <div class="flex justify-end space-x-4 mt-10">
+                <a href="/project/{{ project.id }}/milestone">
+                    <button type="button" 
+                            class="bg-gray-300 text-gray-800 px-6 py-3 rounded-lg shadow-md hover:bg-gray-400 transition duration-300 ease-in-out transform hover:-translate-y-1 hover:scale-105">
+                        {% translate "Cancelar" %}
+                    </button>
+                </a>
+                <button type="submit" 
+                        class="bg-primary_medium text-white px-6 py-3 rounded-lg shadow-md hover:bg-primary_dark transition duration-300 ease-in-out transform hover:-translate-y-1 hover:scale-105">
+                    {% translate "Guardar Configuración" %}
+                </button>
             </div>
-        {% endfor %}
-        <button type="submit" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">
-            Save Settings
-        </button>
-    </form>
+        </form>
+    </div>
 </div>
-{% endblock %}
+{% endblock app_content %}
