fix: refactor homepage templates
- Replace bottom_bar.html with footer.html
- Update styles and classes in footer.html
- Remove unnecessary code from hero.html
- Update include statement in home.html

--- a/src/templates/homepage/home.html
+++ b/src/templates/homepage/home.html
@@ -7,6 +7,6 @@
 
     {% include 'homepage/hero.html' %}
 
-    {% include 'homepage/bottom_bar.html' %}
+    {% include 'homepage/footer.html' %}
 
 {% endblock %}
